--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 if (NOT PICO_NO_HARDWARE)
     add_subdirectory(lab3)
     add_subdirectory(lab4)
-    add_subdirectory(demo)
+    add_subdirectory(demoSD)
     add_subdirectory(demoWiFi)
     add_subdirectory(demoMQTT)
 endif()
