--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,11 +13,5 @@ endif()
 
 # Add individual projects
 if(NOT PICO_NO_HARDWARE)
-    add_subdirectory(lab3)
-    add_subdirectory(lab4)
-    add_subdirectory(lab6)
-    add_subdirectory(demoSD)
-    add_subdirectory(demoWiFi)
-    add_subdirectory(demoMQTT)
-    add_subdirectory(LutfiPicoServer)
+    add_subdirectory(Pico1)
 endif()
