--- a/pico3/CMakeLists.txt
+++ b/pico3/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.13)
 include($ENV{PICO_SDK_PATH}/external/pico_sdk_import.cmake)
 
-project(LutfiPicoServer C CXX ASM)
+project(pico3 C CXX ASM)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
 
@@ -9,7 +9,7 @@ pico_sdk_init()
 
 # Remove this line: add_subdirectory(../no-OS-FatFS-SD-SPI-RPi-Pico/FatFs_SPI build)
 
-add_executable(LutfiPicoServer
+add_executable(pico3
     main.c
     pico3_driver.c
     wifi_driver.c
@@ -20,16 +20,14 @@ add_executable(LutfiPicoServer
     http_server_driver.c
 )
 
+pico_add_extra_outputs(pico3)
 
-
-pico_add_extra_outputs(LutfiPicoServer)
-
-target_include_directories(LutfiPicoServer PRIVATE
+target_include_directories(pico3 PRIVATE
     ${CMAKE_CURRENT_LIST_DIR}
     ${CMAKE_SOURCE_DIR}/no-OS-FatFS-SD-SPI-RPi-Pico/FatFs_SPI
 )
 
-target_link_libraries(LutfiPicoServer
+target_link_libraries(pico3
     pico_stdlib
     pico_cyw43_arch_lwip_threadsafe_background
     pico_lwip_mqtt
@@ -38,5 +36,5 @@ target_link_libraries(LutfiPicoServer
     FatFs_SPI
 )
 
-pico_enable_stdio_usb(LutfiPicoServer 1)
-pico_enable_stdio_uart(LutfiPicoServer 0)
+pico_enable_stdio_usb(pico3 1)
+pico_enable_stdio_uart(pico3 0)
