--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,4 +16,6 @@ if(NOT PICO_NO_HARDWARE)
     add_subdirectory(demoSD)
     add_subdirectory(demoWiFi)
     add_subdirectory(demoMQTT)
+    add_subdirectory(Pico1)
+    add_subdirectory(Pico3)
 endif()
