Implement lab2 LED/button logic and refactor lab3 stopwatch
Added full implementation for lab2, including LED and button initialization, bit manipulation functions, and main loop. Refactored lab3 to use a new stopwatch state machine with improved debounce logic, replaced template_main.c with main.c, and updated CMakeLists.txt files to reflect new source structure.

--- a/lab3/CMakeLists.txt
+++ b/lab3/CMakeLists.txt
@@ -13,7 +13,7 @@ pico_sdk_init()
 
 # Tell CMake where to find the executable source file
 add_executable(lab3 
-    template_main.c
+    main.c
     functions.c
 )
 
