Add Pico4 MQTT WiFi client example project
Introduces a new Pico4 directory with a complete MQTT client example for Raspberry Pi Pico W, including WiFi and MQTT drivers, configuration, and build files. Updates the root CMakeLists.txt to include Pico4. The project demonstrates connecting to WiFi, publishing and subscribing to MQTT topics, and provides documentation and configuration templates.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,4 +18,5 @@ if(NOT PICO_NO_HARDWARE)
     add_subdirectory(demoMQTT)
     add_subdirectory(Pico2)
     add_subdirectory(Pico3)
+    add_subdirectory(Pico4)
 endif()
