--- a/Pico1/CMakeLists.txt
+++ b/Pico1/CMakeLists.txt
@@ -1,66 +1,50 @@
-# Generated Cmake Pico project file
-
+# ---- Project setup ----
 cmake_minimum_required(VERSION 3.13)
 
+# Project name and C standard
+project(Pico1 C CXX ASM)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-# Initialise pico_sdk from installed location
-# (note this can come from environment, CMake cache etc)
-
-# == DO NOT EDIT THE FOLLOWING LINES for the Raspberry Pi Pico VS Code Extension to work ==
-if(WIN32)
-    set(USERHOME $ENV{USERPROFILE})
-else()
-    set(USERHOME $ENV{HOME})
-endif()
-set(sdkVersion 2.2.0)
-set(toolchainVersion 14_2_Rel1)
-set(picotoolVersion 2.2.0-a4)
-set(picoVscode ${USERHOME}/.pico-sdk/cmake/pico-vscode.cmake)
-if (EXISTS ${picoVscode})
-    include(${picoVscode})
-endif()
-# ====================================================================================
-set(PICO_BOARD pico_w CACHE STRING "Board type")
-
-# Pull in Raspberry Pi Pico SDK (must be before project)
+# ---- Include SDK and Extras ----
+# Import the Pico SDK
 include(pico_sdk_import.cmake)
 
-project(Pico1 C CXX ASM)
-
-# Initialise the Raspberry Pi Pico SDK
+# Initialize the SDK
 pico_sdk_init()
 
-# Add executable. Default name is the project name, version 0.1
-
+# ---- Add Executable ----
 add_executable(Pico1
     main.c
-    acd1100.c
-    mqtt_driver.c
     wifi_driver.c
+    mqtt_driver.c
+    acd1100.c
 )
 
-target_include_directories(Pico1 PRIVATE ${CMAKE_CURRENT_LIST_DIR})
+# ---- Include Directories ----
+target_include_directories(Pico1 PRIVATE
+    ${CMAKE_CURRENT_LIST_DIR}
+    ${PICO_EXTRAS_PATH}/src/rp2_common/pico_sleep/include
+    ${PICO_EXTRAS_PATH}/src/rp2_common/hardware_rosc/include
+    ${PICO_EXTRAS_PATH}/src/rp2_common/pico_aon_timer/include
+)
 
-# Enable USB stdio; disable UART stdio
-pico_enable_stdio_usb(Pico1 1)
-pico_enable_stdio_uart(Pico1 0)
-
-# pull in common dependencies
-target_link_libraries(Pico1 
+# ---- Link Libraries ----
+target_link_libraries(Pico1
     pico_stdlib
+    pico_cyw43_arch_lwip_threadsafe_background  
+    hardware_vreg
+    hardware_clocks                              
+    hardware_gpio
+    hardware_rtc
     hardware_i2c
-    pico_cyw43_arch_lwip_threadsafe_background
+    hardware_adc
     pico_lwip_mqtt
 )
 
-if (PICO_CYW43_SUPPORTED)
-    target_link_libraries(Pico1 pico_cyw43_arch_none)
-endif()
+# ---- Enable standard outputs ----
+pico_enable_stdio_usb(Pico1 1)
+pico_enable_stdio_uart(Pico1 0)
 
-# create map/bin/hex file etc.
+# ---- Create UF2, bin, and hex files ----
 pico_add_extra_outputs(Pico1)
-
-# add url via pico_set_program_url
