--- a/Pico2/CMakeLists.txt
+++ b/Pico2/CMakeLists.txt
@@ -38,11 +38,17 @@ pico_sdk_init()
 add_executable(Pico2
     main.c
     acd1100.c
+    ema_filter.c
     mqtt_driver.c
     wifi_driver.c
+    power_manager.c
 )
 
-target_include_directories(Pico2 PRIVATE ${CMAKE_CURRENT_LIST_DIR})
+target_include_directories(Pico2 PRIVATE
+    ${CMAKE_CURRENT_LIST_DIR}
+    ${PICO_SDK_PATH}/lib/lwip/src/include        # for lwip/apps/mqtt.h
+    ${PICO_SDK_PATH}/src/rp2_common/pico_cyw43_arch/include # for pico/cyw43_arch.h
+)
 
 # Enable USB stdio; disable UART stdio
 pico_enable_stdio_usb(Pico2 1)
@@ -52,6 +58,8 @@ pico_enable_stdio_uart(Pico2 0)
 target_link_libraries(Pico2 
     pico_stdlib
     hardware_i2c
+    hardware_vreg
+    hardware_clocks 
     pico_cyw43_arch_lwip_threadsafe_background
     pico_lwip_mqtt
 )
